--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,17 @@
 version: 2
 jobs:
-  build:
-    docker:
-      - image: docker:17.05.0-ce
-    steps:
-      - checkout
-      - run:
-          name: Build Docker image
-          command: docker build -t aliwhat .
+ build:
+   machine: true
+   steps:
+     - checkout
+     # start proprietary DB using private Docker image
+     # with credentials stored in the UI
+    #  - run: |
+    #      docker login -u $DOCKER_USER -p $DOCKER_PASS
+    #      docker run -d --name db company/proprietary-db:1.2.3
+
+     # build the application image
+     - run: docker build -t company/app:$CIRCLE_BRANCH .
+
+    #  # deploy the image
+    #  - run: docker push company/app:$CIRCLE_BRANCH
