--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,9 +6,8 @@ jobs:
      - checkout
      # start proprietary DB using private Docker image
      # with credentials stored in the UI
-    #  - run: |
-    #      docker login -u $DOCKER_USER -p $DOCKER_PASS
-    #      docker run -d --name db company/proprietary-db:1.2.3
+     - run: |
+         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
 
      # build the application image
      - run: docker build -t company/app:$CIRCLE_BRANCH .
