--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
          docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
 
      # build the application image
-     - run: docker build -t company/app:$CIRCLE_BRANCH .
+     - run: docker build -t company/app:$CIRCLE_BRANCH-$CIRCLE_SHA1 .
 
-    #  # deploy the image
-    #  - run: docker push company/app:$CIRCLE_BRANCH
+    # deploy the image
+     - run: docker push company/app:$CIRCLE_BRANCH-$CIRCLE_SHA1
