--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,11 +8,14 @@ jobs:
      # with credentials stored in the UI
      - run: |
          docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
+         export TAG=$(echo $CIRCLE_SHA1 | cut -c 1-8)
+         docker build -t docker.io/ilyeshammadi/aliwhat:$CIRCLE_BRANCH-$TAG .
+         docker push docker.io/ilyeshammadi/aliwhat:$CIRCLE_BRANCH-$TAG
 
-     - run: export TAG=$(echo $CIRCLE_SHA1 | cut -c 1-8)
+    #  - run: export TAG=$(echo $CIRCLE_SHA1 | cut -c 1-8)
 
-     # build the application image
-     - run: docker build -t docker.io/ilyeshammadi/aliwhat:$CIRCLE_BRANCH-$TAG .
+    #  # build the application image
+    #  - run: docker build -t docker.io/ilyeshammadi/aliwhat:$CIRCLE_BRANCH-$TAG .
 
-    # deploy the image
-     - run: docker push docker.io/ilyeshammadi/aliwhat:$CIRCLE_BRANCH-$TAG
+    # # deploy the image
+    #  - run: docker push docker.io/ilyeshammadi/aliwhat:$CIRCLE_BRANCH-$TAG
