--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,21 +1,14 @@
 version: 2
 jobs:
  build:
+   enviroment:
+       TAG: echo $CIRCLE_SHA1 | cut -c 1-8
    machine: true
    steps:
      - checkout
-     # start proprietary DB using private Docker image
-     # with credentials stored in the UI
-     - run: |
-         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
-         export TAG=$(echo $CIRCLE_SHA1 | cut -c 1-8)
-         docker build -t docker.io/ilyeshammadi/aliwhat:$CIRCLE_BRANCH-$TAG .
-         docker push docker.io/ilyeshammadi/aliwhat:$CIRCLE_BRANCH-$TAG
 
-    #  - run: export TAG=$(echo $CIRCLE_SHA1 | cut -c 1-8)
+     - run: docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
+     - run: export TAG=$(echo $CIRCLE_SHA1 | cut -c 1-8)
+     - run: docker build -t docker.io/ilyeshammadi/aliwhat:$CIRCLE_BRANCH-$TAG .
+     - run: docker push docker.io/ilyeshammadi/aliwhat:$CIRCLE_BRANCH-$TAG
 
-    #  # build the application image
-    #  - run: docker build -t docker.io/ilyeshammadi/aliwhat:$CIRCLE_BRANCH-$TAG .
-
-    # # deploy the image
-    #  - run: docker push docker.io/ilyeshammadi/aliwhat:$CIRCLE_BRANCH-$TAG
