--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,3 +30,12 @@ jobs:
         machine: true
         steps:
             - run: echo "Deploy"
+
+
+workflows:
+  version: 2
+  workflow:
+    jobs:
+      - test
+      - build
+      
