--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,12 +2,22 @@ version: 2
 jobs:
 
     unit-test:
-        docker:
-            - image: circleci/node:8-jessie
+        machine: true
         steps:
             - checkout
             - run: echo "Running unit tests"
 
+    integration-test:
+        machine: true
+        steps:
+            - checkout
+            - run: echo "Running integration tests"
+
+    stress-test:
+        machine: true
+        steps:
+            - checkout
+            - run: echo "Running stress tests"
     build:
         machine: true
         steps:
@@ -36,6 +46,11 @@ workflows:
   version: 2
   workflow:
     jobs:
-      - unit-test
-      - build
-      
+        - unit-test
+        - integration-test
+        - stress-test
+        - build:
+            requires:
+            - unit-test
+            - integration-test
+            - stress-test
