--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,6 +62,16 @@ workflows:
                 - unit-test
                 - integration-test
                 - stress-test
+            filters:
+                branches:
+                    only:
+                        - master
+                        - develop
+                tags:
+                    only: /^\d+.\d+/
+
+        
+        # Hold before deploying to production
         - hold:
             type: approval
             requires:
@@ -75,6 +85,8 @@ workflows:
         - deploy-prod:
             requires:
                 - hold
+        
+        # Deploy only when commits to develop branch
         - deploy-staging:
             requires:
                 - build
