--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -80,6 +80,9 @@ workflows:
             requires:
                 - build
             filters:
+                branches:
+                    only:
+                        - master
                 tags:
                     only: /^\d+.\d+.\d+$/
         
