--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -80,7 +80,7 @@ workflows:
                 branches:
                     ignore: /.*/
                 tags:
-                    only: /^v[0-9]+(\.[0-9]+)*$/
+                    only: /^[0-9]+(\.[0-9]+)*$/
         
         - deploy-prod:
             requires:
