--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,19 +22,20 @@ jobs:
         machine: true
         steps:
             - checkout
-            - run:
-                name: Setup the commit sha
-                command: | 
-                    echo 'export TAG=$(echo $CIRCLE_SHA1 | cut -c 1-8)' >> $BASH_ENV
-                    source $BASH_ENV
-            - run:
-                name: Build the Image
-                command: docker build -t docker.io/ilyeshammadi/aliwhat:$CIRCLE_BRANCH-$TAG .
-            - run:
-                name: Login and push to the Registry
-                command: |
-                    docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
-                    docker push docker.io/ilyeshammadi/aliwhat:$CIRCLE_BRANCH-$TAG
+            # - run:
+            #     name: Setup the commit sha
+            #     command: | 
+            #         echo 'export TAG=$(echo $CIRCLE_SHA1 | cut -c 1-8)' >> $BASH_ENV
+            #         source $BASH_ENV
+            # - run:
+            #     name: Build the Image
+            #     command: docker build -t docker.io/ilyeshammadi/aliwhat:$CIRCLE_BRANCH-$TAG .
+            # - run:
+            #     name: Login and push to the Registry
+            #     command: |
+            #         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
+            #         docker push docker.io/ilyeshammadi/aliwhat:$CIRCLE_BRANCH-$TAG
+            - run: echo "Build the docker image"
 
     deploy-prod:
         machine: true
