--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,13 +51,24 @@ workflows:
   version: 2
   workflow:
     jobs:
-        - unit-test
-        - integration-test
+        - unit-test:
+            filters:
+                tags:
+                    only: 1.1.7
+
+        - integration-test:
+            filters:
+                tags:
+                    only: 1.1.7
+
         - stress-test:
             filters:
                 branches:
                     only:
                         - master
+                tags:
+                    only: 1.1.7
+
         
         # Build only for master, develop and stable releases
         - build:
@@ -70,6 +81,8 @@ workflows:
                     only:
                         - master
                         - develop
+                tags:
+                    only: 1.1.7
         
         # Hold before deploying to production
         # Production is only triggerd on releases
