--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,12 +54,12 @@ workflows:
         - unit-test:
             filters:
                 tags:
-                    only: 1.1.8
+                    only: /^[0-9]+.[0-9]+.[0-9]+$/
 
         - integration-test:
             filters:
                 tags:
-                    only: 1.1.8
+                    only: /^[0-9]+.[0-9]+.[0-9]+$/
 
         - stress-test:
             filters:
@@ -67,7 +67,7 @@ workflows:
                     only:
                         - master
                 tags:
-                    only: 1.1.8
+                    only: /^[0-9]+.[0-9]+.[0-9]+$/
 
         
         # Build only for master, develop and stable releases
@@ -82,7 +82,7 @@ workflows:
                         - master
                         - develop
                 tags:
-                    only: 1.1.8
+                    only: /^[0-9]+.[0-9]+.[0-9]+$/
         
         # Hold before deploying to production
         # Production is only triggerd on releases
@@ -94,7 +94,7 @@ workflows:
                 branches:
                     ignore: /.*/
                 tags:
-                    only: 1.1.8
+                    only: /^[0-9]+.[0-9]+.[0-9]+$/
         
         - deploy-prod:
             requires:
@@ -103,7 +103,7 @@ workflows:
                 branches:
                     ignore: /.*/
                 tags:
-                    only: 1.1.8
+                    only: /^[0-9]+.[0-9]+.[0-9]+$/
         
         # Deploy only when commits to develop branch
         - deploy-staging:
