--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,6 +62,13 @@ jobs:
                     docker tag ${PROJECT_NAME} eu.gcr.io/${GOOGLE_PROJECT_ID}/${PROJECT_NAME}:${CIRCLE_SHA1}
                     gcloud auth print-access-token | docker login -u oauth2accesstoken --password-stdin https://eu.gcr.io
                     docker push eu.gcr.io/${GOOGLE_PROJECT_ID}/${PROJECT_NAME}:${CIRCLE_SHA1}
+            
+            - run:
+                name: Install and configure Helm
+                command: |
+                    curl https://raw.githubusercontent.com/kubernetes/helm/v2.12.2/scripts/get | bash
+                    helm init -c
+            
             - run: 
                 name: Deploy to Kubernetes
                 command: helm upgrade aliwhat aliwhat  --set image.tag=${CIRCLE_SHA1}
