--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -131,10 +131,12 @@ workflows:
                 tags:
                     only: /^[0-9]+.[0-9]+.[0-9]+$/
         
-        # Deploy only when commits to develop branch
+        # Deploy to staging when new commits on develop
         - deploy-staging:
             requires:
-                - build
+                - unit-test
+                - integration-test
+                - stress-test
             filters:
                 branches:
                     only:
