--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,20 +35,21 @@ jobs:
             GOOGLE_PROJECT_ID: "ilyes-sandbox"
             GOOGLE_COMPUTE_ZONE: "europe-west4-a"
             GOOGLE_CLUSTER_NAME: "sandbox"
+            KUBERNETES_NAMESPACE: "aliwhat-staging"
         steps:
             - checkout
             - run: 
                 name: Setup Google Cloud SDK
-                command: bash deployment/scripts/gcloud_setup.sh
+                command: bash deployment/scripts/gcloud_setup.sh 
                     
             - setup_remote_docker
             - run: 
                 name: Docker build
-                command: bash deployment/scripts/docker_build.sh
+                command: bash deployment/scripts/docker_build.sh ${CIRCLE_SHA1}
             
             - run: 
                 name: Docker push
-                command: bash deployment/scripts/docker_push.sh
+                command: bash deployment/scripts/docker_push.sh ${CIRCLE_SHA1}
             
             - run:
                 name: Install and configure Helm
@@ -56,7 +57,7 @@ jobs:
             
             - run: 
                 name: Deploy to Kubernetes
-                command: helm upgrade aliwhat deployment/aliwhat  --set image.tag=${CIRCLE_SHA1}
+                command: bash deployment/scripts/helm_upgrade.sh ${CIRCLE_SHA1}
     
     deploy-prod:
         docker:
@@ -66,37 +67,29 @@ jobs:
             GOOGLE_PROJECT_ID: "ilyes-sandbox"
             GOOGLE_COMPUTE_ZONE: "europe-west4-a"
             GOOGLE_CLUSTER_NAME: "sandbox"
+            KUBERNETES_NAMESPACE: "aliwhat-prod"
         steps:
             - checkout
             - run: 
                 name: Setup Google Cloud SDK
-                command: |
-                    apt-get install -qq -y gettext
-                    echo $GCLOUD_SERVICE_KEY > ${HOME}/gcloud-service-key.json
-                    gcloud auth activate-service-account --key-file=${HOME}/gcloud-service-key.json
-                    gcloud --quiet config set project ${GOOGLE_PROJECT_ID}
-                    gcloud --quiet config set compute/zone ${GOOGLE_COMPUTE_ZONE}
-                    gcloud --quiet container clusters get-credentials ${GOOGLE_CLUSTER_NAME}
+                command: bash deployment/scripts/gcloud_setup.sh
+                    
             - setup_remote_docker
             - run: 
-                name: Docker build and push
-                command: |
-                    docker build \
-                    --build-arg COMMIT_REF=${CIRCLE_TAG} \
-                    -t ${PROJECT_NAME} .
-                    docker tag ${PROJECT_NAME} eu.gcr.io/${GOOGLE_PROJECT_ID}/${PROJECT_NAME}:${CIRCLE_TAG}
-                    gcloud auth print-access-token | docker login -u oauth2accesstoken --password-stdin https://eu.gcr.io
-                    docker push eu.gcr.io/${GOOGLE_PROJECT_ID}/${PROJECT_NAME}:${CIRCLE_TAG}
+                name: Docker build
+                command: bash deployment/scripts/docker_build.sh ${CIRCLE_TAG}
+            
+            - run: 
+                name: Docker push
+                command: bash deployment/scripts/docker_push.sh ${CIRCLE_TAG}
             
             - run:
                 name: Install and configure Helm
-                command: |
-                    curl https://raw.githubusercontent.com/kubernetes/helm/v2.12.2/scripts/get | bash
-                    helm init -c
+                command: bash deployment/scripts/install_helm.sh
             
             - run: 
                 name: Deploy to Kubernetes
-                command: helm upgrade aliwhat deployment/aliwhat  --set image.tag=${CIRCLE_TAG}
+                command: bash deployment/scripts/helm_upgrade.sh ${CIRCLE_TAG}
 
 workflows:
   version: 2
